--- a/statApp/templates/statApp/form_get_weather.html
+++ b/statApp/templates/statApp/form_get_weather.html
@@ -8,7 +8,7 @@
     <div class=" input-group">
 
         <div class="input-group-btn">
-            <button type="submit" class="btn btn-primary">Search</button>
+            <button type="submit" class="btn btn-primary">Calculate</button>
         </div>
     </div>
 </form>
