--- a/statApp/templates/statApp/index.html
+++ b/statApp/templates/statApp/index.html
@@ -38,22 +38,21 @@
     {% endblock %}
 
 </nav>
-<br> <br>
+<br>
 <div class="row">
     <div class="col d-flex justify-content-center">
         <div class=" card text-dark bg-dark mb-6">
             <div class=" card-body">
-                <h4><span class="badge badge-primary">Min temperature :</span> {{stat_weather.abs_min_temp}}</h4>
-                <h4><span class="badge badge-primary">Avg temperature :</span> {{stat_weather.avg_temp}}</h4>
-                <h4><span class="badge badge-primary">Max temperature :</span> {{stat_weather.abs_max_temp}}</h4>
+                <h4><span class="badge badge-primary">Min temperature :</span> {{stat.abs_min_temp}}</h4>
+                <h4><span class="badge badge-primary">Avg temperature :</span> {{stat.avg_temp}}</h4>
+                <h4><span class="badge badge-primary">Max temperature :</span> {{stat.abs_max_temp}}</h4>
                 <h4><span class="badge badge-primary">Avg max year temp :</span> {{...}}</h4>
                 <h4><span class="badge badge-primary">Avg min year temp :</span> {{...}}</h4>
                 <h4><span class="badge badge-primary">Day with similar temp :</span> {{...}}</h4>
-                <h4><span class="badge badge-primary">days with precipitation :</span> {{stat_weather.precip_days}}</h4>
-                <h4><span class="badge badge-primary">Wind speed :</span> {{wind_speed}} </h4>
-                <h4><span class="badge badge-primary">Wind degree : </span> {{wind_deg}}</h4>
-                <h4><span class="badge badge-primary">Description : </span> {{description}} <img
-                        src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:100px"></h4>
+                <h4><span class="badge badge-primary">Days with precipitation :</span> {{stat.precip_days}}</h4>
+                <h4><span class="badge badge-primary">Most frequent precipitation : </span> {{stat.most_frequent_prec}} </h4>
+                <h4><span class="badge badge-primary">Awg wind speed :</span> {{stat.avg_wind_speed}} </h4>
+                <h4><span class="badge badge-primary">Awg wind direction : </span> {{stat.avg_wind_dir}}</h4>
             </div>
         </div>
     </div>
