--- a/statApp/templates/statApp/index.html
+++ b/statApp/templates/statApp/index.html
@@ -46,8 +46,8 @@
                 <h4><span class="badge badge-primary">Min temperature :</span> {{stat.abs_min_temp}}</h4>
                 <h4><span class="badge badge-primary">Avg temperature :</span> {{stat.avg_temp}}</h4>
                 <h4><span class="badge badge-primary">Max temperature :</span> {{stat.abs_max_temp}}</h4>
-                <h4><span class="badge badge-primary">Avg max year temp :</span> {{...}}</h4>
-                <h4><span class="badge badge-primary">Avg min year temp :</span> {{...}}</h4>
+                <h4><span class="badge badge-primary">Avg max year temp :</span> {{stat.year_max}}</h4>
+                <h4><span class="badge badge-primary">Avg min year temp :</span> {{stat.year_min}}</h4>
                 <h4><span class="badge badge-primary">Day with similar temp :</span> {{...}}</h4>
                 <h4><span class="badge badge-primary">Days with precipitation :</span> {{stat.precip_days}}</h4>
                 <h4><span class="badge badge-primary">Most frequent precipitation : </span> {{stat.most_frequent_prec}} </h4>
