request_time added

--- a/statApp/templates/statApp/index.html
+++ b/statApp/templates/statApp/index.html
@@ -50,7 +50,9 @@
                 <h4><span class="badge badge-primary">Most frequent precipitation : </span> {{stat.most_frequent_prec}}
                 </h4>
                 <h4><span class="badge badge-primary">Awg wind speed :</span> {{stat.avg_wind_speed}} m/s</h4>
-                <h4><span class="badge badge-primary">Awg wind direction : </span> {{stat.avg_wind_dir}}</h4>
+                <h4><span class="badge badge-primary">Awg wind direction : </span> {{stat.avg_wind_dir}} </h4>
+                <br>
+                <h6><span> response time {{stat.request_time}} </span></h6>
             </div>
         </div>
     </div>
